<resources>
    <string name="app_name">Android XML Layout Design</string>
    <string name="sign_up">Sign up</string>
    <string name="facebook_button">Facebook Button</string>
    <string name="twitter_button">Twitter Button</string>
    <string name="or_sign_up_with_email">or sign up with email</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="by_signing_up_you_agreed_with_our_terms_of_nservices_and_privacy_policy">By signing up, you agreed with our Terms of\nServices and Privacy Policy.</string>
    <string name="already_have_account">Already have account?</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_discovery">Discovery</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="discovery">Discovery</string>
    <string name="beer_and_hotels">Beer and Hotels</string>
    <string name="fine_dining">Fine Dining</string>
    <string name="cafes">Cafes</string>
    <string name="nearby">Nearby</string>
    <string name="fast_food">Fast Food</string>
    <string name="featured_foods">Featured Foods</string>
    <string name="fine_dine">Fine Dine</string>
    <string name="bars_amp_hotels"><![CDATA[Bars & Hotels]]></string>
    <string name="_42_items">42 Items</string>
    <string name="_28_places">28 Places</string>
    <string name="fast_foods">Fast Foods</string>
    <string name="_29_places">29 Places</string>
    <string name="_15_places">15 Places</string>
    <string name="_34_places">34 Places</string>
    <string name="_21_places">21 Places</string>
    <string name="cafes_menu">Cafes</string>
    <string name="nearby_menu">Nearby</string>
    <string name="featured_foods_menu">Featured Foods</string>
    <string name="check_out">Check out</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="_123_york_stbrooklyn_ny_n11201_usa">123 York StBrooklyn, NY\n11201, USA</string>
    <string name="change">Change</string>
    <string name="payment_method">Payment Method</string>
    <string name="add">Add +</string>
    <string name="enter_visa_number">Enter Visa number</string>
    <string name="visa_number">Visa Number</string>
    <string name="paypal_id">Paypal ID</string>
    <string name="_1233">**** **** **** 1233</string>
    <string name="jacky_gmail_com">jacky@gmail.com</string>
    <string name="enter_coupon">Enter Coupon</string>
    <string name="hungry10">HUNGRY10</string>
    <string name="summary">Summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="_64_00">$64.00</string>
    <string name="discount">Discount</string>
    <string name="_6_4">- $6.4</string>
    <string name="delivery_cost">Delivery Cost</string>
    <string name="free">Free</string>
    <string name="total">Total</string>
    <string name="_57_60">$57.60</string>
    <string name="send_order">Send Order</string>
    <string name="back">back</string>
    <string name="log_into">Log into</string>
    <string name="your_account">your account</string>
    <string name="login">Login</string>
    <string name="or_sign_up_with_social_account">Or sign up with social account</string>
    <string name="hi_rakib">Hi, Rakib</string>
    <string name="tue_13_oct">Tue  13  oct</string>
    <string name="_84">84</string>
    <string name="health_score">Health Score</string>
    <string name="based_on_your_overall_health_ntest_your_score_is_84_and_nconsider_good">Based on your overall health\ntest, your score is 84 and \nconsider good..</string>
    <string name="read_more">Read more</string>
    <string name="metrics">Metrics</string>
    <string name="calories">Calories</string>
    <string name="_500_cal">500 cal</string>
    <string name="last_update_3m">last update 3m</string>
    <string name="weight">Weight</string>
    <string name="_58_kg">58 kg</string>
    <string name="last_update_3d">last update 3d</string>
    <string name="water">Water</string>
    <string name="_750_ml">750 ml</string>
    <string name="steps">Steps</string>
    <string name="_9_890">9,890</string>
</resources>