<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:drawableStartCompat="@drawable/arrow"
        app:layout_constraintHorizontal_bias="0.070"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="35sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.120"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView"
        app:layout_constraintVertical_bias="0.049"
        android:orientation="horizontal" >

        <ImageButton
            android:layout_width="135dp"
            android:layout_height="55dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:background="@drawable/facebook_bg"
            android:src="@drawable/facebook_button"
            android:contentDescription="@string/facebook_button" />

        <ImageButton
            android:layout_width="135dp"
            android:layout_height="55dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="35dp"
            android:layout_weight="1"
            android:background="@drawable/twitter_bg"
            android:src="@drawable/twitter_button"
            android:contentDescription="@string/twitter_button" />

    </LinearLayout>

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_sign_up_with_email"
        android:textStyle="bold"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout"
        app:layout_constraintVertical_bias="0.050" />

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView2"
        app:layout_constraintVertical_bias="0.035">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/textboxfield"
            android:gravity="center_vertical"
            android:hint="@string/first_name"
            android:inputType="text"
            android:padding="16dp"
            android:autofillHints="" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/textboxfield"
            android:gravity="center_vertical"
            android:hint="@string/last_name"
            android:inputType="text"
            android:padding="16dp"
            android:autofillHints="" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/textboxfield"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:autofillHints="" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/textboxfield"
            android:drawableEnd="@drawable/view"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:padding="16dp"
            android:autofillHints="" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="335dp"
        android:layout_height="45dp"
        android:background="@drawable/signup_btn"
        android:text="@string/signup_str"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout2"
        app:layout_constraintVertical_bias="0.120" />

    <TextView
        android:id="@+id/TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_signing_up_you_agreed_with_our_terms_of_nservices_and_privacy_policy"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/TextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textStyle="bold"
        android:textColor="#6D31FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toEndOf="@+id/TextView4"
        app:layout_constraintTop_toBottomOf="@+id/TextView3" />

</androidx.constraintlayout.widget.ConstraintLayout>